[gd_scene load_steps=16 format=3 uid="uid://vaqwcb5e3huk"]

[ext_resource type="Script" path="res://scenes/dialogs/register_dialog/register_dialog.gd" id="1_xufkn"]
[ext_resource type="PackedScene" uid="uid://dl4nx74f03pxd" path="res://scenes/ui_elements/glass_panel.tscn" id="2_cr363"]
[ext_resource type="FontFile" uid="uid://bd4vhm6dvnuue" path="res://fonts/Games.ttf" id="3_cxlij"]
[ext_resource type="Texture2D" uid="uid://cq0qaoeso6jc" path="res://assets/gui/icons/email.png" id="4_16j4a"]
[ext_resource type="PackedScene" uid="uid://b15ivw3lwhasd" path="res://scenes/ui_elements/basic_rounded_button_01.tscn" id="5_awxgy"]
[ext_resource type="Texture2D" uid="uid://bkl735o4now4n" path="res://assets/gui/icons/locked.png" id="5_jrqbc"]
[ext_resource type="PackedScene" uid="uid://cwr5sfnmp7808" path="res://scenes/ui_elements/square_button_01/square_button_01.tscn" id="7_ulaxe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6pln6"]

[sub_resource type="LabelSettings" id="LabelSettings_gl7oe"]
font = ExtResource("3_cxlij")
font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whjt8"]
content_margin_left = 75.0
content_margin_top = 30.0
content_margin_right = 75.0
content_margin_bottom = 30.0
bg_color = Color(0.607843, 0.505882, 0.847059, 0.12549)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.823529, 0.964706, 0.2)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2m76u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jg4r4"]
bg_color = Color(1, 1, 1, 0.203922)

[sub_resource type="Animation" id="Animation_f3yv1"]
resource_name = "Close"
length = 0.5

[sub_resource type="Animation" id="Animation_ns50l"]
resource_name = "Open"
length = 0.5
step = 0.02

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b82ex"]
_data = {
"Close": SubResource("Animation_f3yv1"),
"Open": SubResource("Animation_ns50l")
}

[node name="RegisterDialog" type="PanelContainer"]
custom_minimum_size = Vector2(600, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_6pln6")
script = ExtResource("1_xufkn")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="glass_panel" parent="." instance=ExtResource("2_cr363")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SIGN UP"
label_settings = SubResource("LabelSettings_gl7oe")

[node name="Form" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/Form"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_whjt8")
placeholder_text = "Name"
caret_blink = true
caret_blink_interval = 0.5

[node name="SurnameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/Form"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_whjt8")
placeholder_text = "Surname"
caret_blink = true
caret_blink_interval = 0.5

[node name="EmailInput" type="LineEdit" parent="MarginContainer/VBoxContainer/Form"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_whjt8")
placeholder_text = "Email"
caret_blink = true
caret_blink_interval = 0.5

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Form/EmailInput"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 33.0
offset_top = -8.0
offset_right = 51.0
offset_bottom = 8.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_16j4a")

[node name="PasswordInput" type="LineEdit" parent="MarginContainer/VBoxContainer/Form"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_whjt8")
placeholder_text = "Password"
secret = true
caret_blink = true
caret_blink_interval = 0.5

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Form/PasswordInput"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 33.0
offset_top = -8.0
offset_right = 51.0
offset_bottom = 8.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_jrqbc")

[node name="PasswordRepeatInput" type="LineEdit" parent="MarginContainer/VBoxContainer/Form"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_whjt8")
placeholder_text = "Repeat password"
secret = true
caret_blink = true
caret_blink_interval = 0.5

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Form/PasswordRepeatInput"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 33.0
offset_top = -8.0
offset_right = 51.0
offset_bottom = 8.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_jrqbc")

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Form"]
layout_mode = 2
mouse_filter = 2

[node name="RegisterButton" parent="MarginContainer/VBoxContainer/Form/Buttons" instance=ExtResource("5_awxgy")]
layout_mode = 2
mouse_filter = 1
text = "Sign up"

[node name="NewAccount" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2m76u")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/NewAccount"]
layout_mode = 2
mouse_filter = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 2

[node name="Sep" type="Panel" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jg4r4")

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Already have an account?"

[node name="LoginButton" type="Button" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.980392, 0, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Login"
flat = true

[node name="Overlay" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="CloseButton" parent="Overlay" instance=ExtResource("7_ulaxe")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = 52.0
grow_horizontal = 0
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_b82ex")
}

[node name="ClickBlocker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Form/Buttons/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewAccount/VBoxContainer/HBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Overlay/CloseButton" to="." method="_on_close_button_pressed"]
